<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_titulo">Aplicativo Lista Vip Curso Android</string>
    <string name="txt_edit_telefone">Telefone</string>
    <string name="txt_edit_nome_curso">Nome do Curso</string>
    <string name="txt_edit_sobrenome">Sobrenome</string>
    <string name="txt_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_button_limpar">Limpar</string>
    <string name="txt_button_Salvar">Salvar</string>
    <string name="txt_button_finalizar">Finalizar</string>
</resources>