<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTelefone"
        android:layout_width="380dp"
        android:layout_height="66dp"
        android:layout_margin="16dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/txt_edit_telefone"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNomeCurso"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextNomeCurso"
        android:layout_width="382dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/txt_edit_nome_curso"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSobrenome" />

    <EditText
        android:id="@+id/editTextSobrenome"
        android:layout_width="380dp"
        android:layout_height="61dp"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/txt_edit_sobrenome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPrimeiroNome" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo"
        android:textColor="#009688"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/editPrimeiroNome"
        android:layout_width="383dp"
        android:layout_height="67dp"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/txt_edit_primeiro_nome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="94dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/CorBotoes"
        android:text="@string/txt_button_limpar"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTelefone"
        app:layout_constraintVertical_bias="0.597" />

    <Button
        android:id="@+id/button2"
        android:layout_width="103dp"
        android:layout_height="52dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/CorBotoes"
        android:text="@string/txt_button_Salvar"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTelefone"
        app:layout_constraintVertical_bias="0.646" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="@color/CorBotoes"
        android:text="@string/txt_button_finalizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTelefone" />

</androidx.constraintlayout.widget.ConstraintLayout>